--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,18 @@
 /onetoone/npm-debug.log
 /onetoone/yarn-error.log
 /onetoone/.env
+
+/polymorphic/node_modules
+/polymorphic/public/hot
+/polymorphic/public/storage
+/polymorphic/storage/*.key
+/polymorphic/vendor
+/polymorphic/.idea
+/polymorphic/.vscode
+/polymorphic/.vagrant
+/polymorphic/Homestead.json
+/polymorphic/Homestead.yaml
+/polymorphic/npm-debug.log
+/polymorphic/yarn-error.log
+/polymorphic/.env
+
