--- a/codehacking/composer.json
+++ b/codehacking/composer.json
@@ -8,9 +8,11 @@
         "php": "^7.1.3",
         "cviebrock/eloquent-sluggable": "^4.5",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6"
+        "laravelcollective/html": "^5.6",
+        "unisharp/laravel-filemanager": "v2.0.0-alpha4"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
